deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arca-gis
  labels:
    app: arca-gis
    region: west-africa
